--- a/index.qmd
+++ b/index.qmd
@@ -1,7 +1,19 @@
-# Preface {.unnumbered}
+# Welcome {.unnumbered}
 
-This is a Quarto book.
+This book is a resource for anyone in the [Fred Hutch Cancer Center Data Science Lab](https://hutchdatascience.org/) community contributing to or using software.
 
-Not sure what to put here. Seems like we have to have a preface for a quarto book?
+The book attempts to cover all important aspects of software development, including how to get involved in software as a user or contributor, code style, code review, package documentation, and more. It includes both internal facing guidelines as well as for any contributions from folks other than DaSL staff.
 
-We could move the intro content here and remove intro chapter?
+- Getting help: @sec-help
+- Contributing guidelines: @sec-contributing
+- Style guidelines: @sec-style
+- Code review guidelines: @sec-review
+- Package documentation guidelines: @sec-docs
+
+
+## Inspiration
+
+Inspiration for this guide is taken in part from:
+
+- [Tidyverse Style Guide](https://style.tidyverse.org/)
+- [rOpenSci Dev Guide](https://devguide.ropensci.org/)
