add iconify extension; add fontawesome icons to chapter titles

--- a/contributing.qmd
+++ b/contributing.qmd
@@ -1,4 +1,4 @@
-# Contributing {#sec-contributing}
+# Contributing {{< iconify fa6-solid hammer >}} {#sec-contributing}
 
 Contributing guidelines ....
 
