#6 started security chapter, remove intro ch not used, update welcome page

--- a/index.qmd
+++ b/index.qmd
@@ -9,6 +9,9 @@ The book attempts to cover all important aspects of software development, includ
 - Style guidelines: @sec-style
 - Code review guidelines: @sec-review
 - Package documentation guidelines: @sec-docs
+- Package maintenance: @sec-maintenance
+- Security: @sec-security
+
 
 
 ## Inspiration
