--- a/contributing.qmd
+++ b/contributing.qmd
@@ -6,7 +6,7 @@ This chapter is intended to direct you to the place you want to be, whether you 
 
 * Slack: Fred Hutch folks can chat with other community members and DaSL and Fred Hutch SciComp staff in the Fred Hutch Data Slack. Join our Slack here {{< iconify fa6-solid hand-point-right >}} <https://hutchdatascience.org/joinslack/>
 * GitHub Issues: Each GitHub repository has an issues tab where you can ask questions, propose a feature, and more. See below for more details.
-* Data House Calls: https://calendly.com/data-house-calls 
+* Data House Calls: <https://calendly.com/data-house-calls>
 
 ## Software
 
