--- a/conventions.qmd
+++ b/conventions.qmd
@@ -1,5 +1,27 @@
 # Conventions {{< iconify fa6-solid person-digging >}} {#sec-conventions}
 
+## Mention our employer
+
+In all repositories in WILDS we will include mention of our employer. The following are examples for R and Python:
+
+- R:
+  - With the `usethis` package you can add an entry of type `person` to the DESCRIPTION file of your package
+
+  ```r
+  usethis::use_author("Fred Hutchinson Cancer Center", role = "fnd", email = "wilds@fredhutch.org")
+  ```
+- Python:
+  - Add a dict in the authors block of the pyproject.toml file or other config file in your package
+
+  ```python3
+  {
+    name = "Fred Hutchinson Cancer Center"",
+    email = "wilds@fredhutch.org"
+  }
+  ```
+
+For other types of WILDS repositories, perhaps just add a mention to the README.
+
 ## GitHub Repositories
 
 ### Issue labels
@@ -11,7 +33,9 @@ Though we have not done this, one can set default labels for all repositories in
 A [blogpost](https://napjose.ph/posts/copy-issue-labels-from-another-github-repository) shows how to copy labels from one repository to another using the [gh command line tool](https://cli.github.com/) from GitHub. This command line method may be a better choice if we’re not sure we want to go all in on default labels for every new repo. Here's the command:
 
 ```r
-gh label clone getwilds/source-repo-name --repo getwilds/destination-repo-name --force
+gh label clone getwilds/source-repo-name \
+  --repo getwilds/destination-repo-name \
+  --force
 ```
 
 ### Badges
@@ -21,3 +45,4 @@ WILDS projects will use badges to indicate their status. Badges are a widely use
 WILDS badges are maintained in a GitHub repository at <https://github.com/getwilds/badges>. There's a website for these badges and an easy click to copy interface at <https://getwilds.org/badges/>.
 
 An example badge: [![](https://getwilds.org/badges/badges/stable.svg)](https://getwilds.org/badges/#stable)
+
