--- a/codereview.qmd
+++ b/codereview.qmd
@@ -1,17 +1,30 @@
 # Code review {{< iconify fa6-solid pencil >}} {#sec-review}
 
-Code review ....
+As code review is a big topic, we will only discuss here what we strive for, what we'd like our community to do, and point people to relavant information. We're always open to feedback (see *Edit this page* to the right)!
 
-## DaSL interal guidelines
+MORE STUFF ABOUT HIGH LEVEL CODE REVIEW ...
 
-still discussing this internally ...
 
-## Community guidelines
+## Scope
 
-We have code review guidance for labs at <https://hutchdatascience.org/code_review/>. The site contains higher level code review guidance broken down by lab roles, including lab leader, lab manager and lab developer.
+The scope of this guide is for work within the WILDS GitHub organization (<https://github.com/getwilds/>). In  chapters within **Code review** we have the following guidelines:
 
-If you want lower level code review guidance, the [Advanced Reproducibility in Cancer Informatics](https://jhudatascience.org/Adv_Reproducibility_in_Cancer_Informatics/) course has two chapters that will be helpful:
+Contributions to the WILDS:
 
-- [Engaging in Code Review - as an author](https://jhudatascience.org/Adv_Reproducibility_in_Cancer_Informatics/engaging-in-code-review---as-an-author.html)
-- [Engaging in Code Review - as a reviewer](https://jhudatascience.org/Adv_Reproducibility_in_Cancer_Informatics/engaging-in-code-review---as-a-reviewer.html)
+- from within team DASL (@sec-review-dasl)
+- from non-DASL folks, and (@sec-review-external)
+
+And
+
+- advice for broader Fred Hutch community (@sec-review-general)
+
+## Infrastructure
+
+We use a number of helpful tools to facilitate code changes, including code review:
+
+- Contributing instructions in the file `CONTRIBUTING.md`
+- Pull request instructions in a file `pull_request_template.md`
+- Issue instructions in a file `issue_template.md`
+
+Read more about these files in the section @sec-conventions-repos.
 
