--- a/maintenance.qmd
+++ b/maintenance.qmd
@@ -32,7 +32,7 @@ There's no widely accepted single tool for dealing with licenses in Python simil
 
 ## Package versioning
 
-There is a detailed discussion of versioning R packages in the [lifecycle][] chapter of the [R Packages book][rpkgs] by Hadley Wickham and Jenny Bryan. Please follow that chapter in general for versioning of R and Python packages within DaSL. To make it easier to grok, below are some of the highlights, and some exceptions to that chapter.
+There is a detailed discussion of versioning R packages in the [lifecycle][] chapter of the [R Packages book][rpkgs] by Hadley Wickham and Jenny Bryan. Please follow that chapter in general for versioning of R and Python packages within the WILDS. To make it easier to grok, below are some of the highlights, and some exceptions to that chapter.
 
 ### Package version numbers
 
@@ -45,9 +45,9 @@ package_version("2.0") > package_version("10.0")
 
 With that example, please do think about your package versions before setting them.
 
-#### DaSL Conventions
+#### WILDS Conventions
 
-Following the [Tidyverse package version conventions](https://r-pkgs.org/lifecycle.html#sec-lifecycle-version-number-tidyverse), DaSL packages will use the following conventions (see the link for more details):
+Following the [Tidyverse package version conventions](https://r-pkgs.org/lifecycle.html#sec-lifecycle-version-number-tidyverse), WILDS packages will use the following conventions (see the link for more details):
 
 - Always use `.` as the separator, never use `-`.
 - A released version number consists of three components, `<major>`.`<minor>`.`<patch>`
@@ -62,7 +62,7 @@ We are not following or enforcing any rules about changes at the function/class/
 
 In general follow the [Releasing to CRAN chapter](https://r-pkgs.org/release.html) in the book [R Packages][rpkgs] for R, and the [Releasing and versioning chapter](https://py-pkgs.org/07-releasing-versioning) in the book [Python Packages][pypkgs] for Python. Those chapters don't have to be followed to the letter, but in general they provide really good guidance.
 
-There are a few aspects of releases we are opinionated about and would like DaSL R and Python packages to follow:
+There are a few aspects of releases we are opinionated about and would like all WILDS R and Python packages to follow:
 
 - Use the MIT license unless there's good reason not to
 - Follow our versioning guidelines above
