--- a/codereview-guidelines.qmd
+++ b/codereview-guidelines.qmd
@@ -47,7 +47,7 @@ Adapted from:
 - When making visual changes, include screenshots or screencasts to show the effect of the changes
   - You may want to consider before/after screenshots or screencasts whenever applicable.
 - Seek to understand the reviewer's perspective
-- View each comment as an opportunity to learn (MG)
+- View each comment as an opportunity to learn
 - If you're someone who says "sorry" frequently, think about removing this from your language (MG)
 - You can ask for clarification (MG)
 - It's OK to disagree. It's helpful to first look for things that you agree with and explain why you disagree (MG)
